test: use indexed access for JDT compilation-unit type list
The Tycho compiler rejects getLast() on CompilationUnit.types(). Select
the final fixture type with the supported indexed List API. Preserve all
ten initialization-safety regressions and their assertions unchanged.

Assisted-by: OpenAI ChatGPT